Get path for external actions binary from a Supplier
Summary:
Changes:
* Wraps external actions jar path into Supplier of PathSourcePath.
* Switch from `ExplicitBuildTargetSourcePath` to `PathSourcePath` as otherwise we would have serialization issues as AbsPath can not be serialized. We could support only RelPath
* Javacd and External Actions resolve relative path to rule cell root and launch java process with `-jar` param passed
* `inputs = IgnoredFieldInputs.class` -> `inputs = DefaultFieldInputs.class`

Reviewed By: Skory

fbshipit-source-id: a5eea82777d59ee4621f09e9b56c2d61c529f4e8